--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ var TokenContract;
 
 //transferToken(100000000);
 
-TokenContract= await new web3.eth.Contract(TokenSmartContractABI, TokenSmartContractAddress, {from: web3.currentProvider.selectedAddress}) ;
+//TokenContract= await new web3.eth.Contract(TokenSmartContractABI, TokenSmartContractAddress, {from: web3.currentProvider.selectedAddress}) ;
 
 
 
