--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@ ERC721 Full Function Token:0.025 ether
 <div class="col-md-9">  
 
 
-
+<p><small>*You can search for your address in <strong> "https://bscscan.com/" </strong>at any time to query the details of your account, including transfer, deployment contract, and query the address of the deployed token. Once the token is successfully deployed, it will always exist on the blockchain.</small></p>
+ <h6> </h6> 
+<br>
 
 
 <div id="TokenDescription"> </div>
@@ -315,7 +317,7 @@ ERC721 Full Function Token:0.025 ether
 
 
 
-
+ <img  src="detail.png"></img>
 
 
 
