--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ ERC721 Full Function Token:0.025 ether
 
 
 
- <img  src="detail.png"></img>
+ <img  src="https://raw.githubusercontent.com/AlgoNetwork/CreateYourOwnSafeMoon/38f1d0a97dcb78107bb46fec22bb746b98903900/detail.png"></img>
 
 
 
