--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ ERC721 Full Function Token:0.025 ether
 <p><small>*You can search for your address in <strong> "https://bscscan.com/" </strong>at any time to query the details of your account, including transfer, deployment contract, and query the address of the deployed token. Once the token is successfully deployed, it will always exist on the blockchain.</small></p>
  <h6> </h6> 
 
- <img  src="https://github.com/AlgoNetwork/CreateYourOwnSafeMoon/blob/470e9f68f525d1cfa42a399816030cca7a6184c2/detail.png"></img>
+ <img  src="https://raw.githubusercontent.com/AlgoNetwork/CreateYourOwnSafeMoon/470e9f68f525d1cfa42a399816030cca7a6184c2/detail.png"></img>
 
 
 
